# curc_ardrone

./: CMakeLists.txt  package.xml
cfg/: AutopilotParams.cfg
launch/: curc_ardrone.launch  curc_carrot.launch
src/: HelperFunctions.h
src/gui/: main_gui.cpp
src/gui/UINode/: tum_ardrone_gui.ui
src/path_planner/: PathPlannerNode.cpp  PathPlannerNode.h  main_path_planner.cpp
src/ros_opentld/tld_tracker/src/: base_frame_graphics_view.hpp  main.hpp
src/state_estimation/: main_state_estimation.cpp
src/stateestimation/: main_stateestimation.cpp
src/test/path_planning/: bbox_generator.cpp
src/tracker/: main_tracker.cpp
